tdf#167023: only try PasteSlidesFromSystemClipboard with correct descriptor

PasteSlidesFromSystemClipboard seems to have some serious side effects,
making following paste of different flavors fail. So check the object
descriptor, which allows to avoid the problematic code for non-Impress
objects. This also improves performance. But the underlying problem is
not fixed here.

Change-Id: I3c58c502900eb7c76b08b77945049bfa6a149182
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186526
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186550